fix: z-index for working overlay

--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -83,7 +83,7 @@ $color-danger: var(--color-danger, #d73740) !default;
     left: 0;
     background: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(5px);
-    z-index: 500;
+    z-index: 2000;
     display: flex;
     flex-direction: column;
     gap: calc(var(--base, 8px) * 4);
